// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Contrato Facturama (F2-202) cancelar con motivo 02 y con motivo 01 + sustituto 1`] = `
[
  {
    "metodo": "DELETE",
    "url": "https://apisandbox.facturama.mx/api-lite/cfdis/fcm-123?type=issuedLite&motive=02",
  },
  {
    "metodo": "DELETE",
    "url": "https://apisandbox.facturama.mx/api-lite/cfdis/fcm-123?type=issuedLite&motive=01&uuidReplacement=0A2B4C6D-1111-4222-8333-944455566677",
  },
]
`;

exports[`Contrato Facturama (F2-202) consultar estado 1`] = `
[
  {
    "metodo": "GET",
    "url": "https://apisandbox.facturama.mx/api-lite/cfdis/fcm-123",
  },
]
`;

exports[`Contrato Facturama (F2-202) emitir: el cuerpo del POST y las descargas de XML y PDF 1`] = `
[
  {
    "cuerpo": {
      "CfdiType": "I",
      "Currency": "MXN",
      "Date": "2026-09-21T20:15:30",
      "ExpeditionPlace": "06700",
      "Exportation": "01",
      "Folio": "1024",
      "Issuer": {
        "FiscalRegime": "601",
        "Name": "ESCUELA KEMPER URGATE",
        "Rfc": "EKU9003173C9",
      },
      "Items": [
        {
          "Description": "Tacos al pastor (orden)",
          "IdentificationNumber": "P001",
          "ProductCode": "90101500",
          "Quantity": 2,
          "Subtotal": 172.42,
          "TaxObject": "02",
          "Taxes": [
            {
              "Base": 172.42,
              "IsRetention": false,
              "Name": "IVA",
              "Rate": 0.16,
              "Total": 27.59,
            },
          ],
          "Total": 200.01,
          "Unit": "Servicio",
          "UnitCode": "E48",
          "UnitPrice": 86.21,
        },
        {
          "Description": "Refresco",
          "IdentificationNumber": "P020",
          "ProductCode": "90101500",
          "Quantity": 1,
          "Subtotal": 30.17,
          "TaxObject": "02",
          "Taxes": [
            {
              "Base": 30.17,
              "IsRetention": false,
              "Name": "IVA",
              "Rate": 0.16,
              "Total": 4.83,
            },
          ],
          "Total": 35,
          "Unit": "Pieza",
          "UnitCode": "H87",
          "UnitPrice": 30.17,
        },
      ],
      "PaymentForm": "04",
      "PaymentMethod": "PUE",
      "Receiver": {
        "CfdiUse": "G03",
        "FiscalRegime": "612",
        "Name": "Cliente "de prueba" & <Hijos>",
        "Rfc": "XOJI740919U48",
        "TaxZipCode": "76028",
      },
      "Serie": "A",
    },
    "metodo": "POST",
    "url": "https://apisandbox.facturama.mx/api-lite/3/cfdis",
  },
  {
    "metodo": "GET",
    "url": "https://apisandbox.facturama.mx/cfdi/xml/issuedLite/fcm-123",
  },
  {
    "metodo": "GET",
    "url": "https://apisandbox.facturama.mx/cfdi/pdf/issuedLite/fcm-123",
  },
]
`;

exports[`Contrato Facturama: CFDI de consumo desde un cheque (F2-104) el cuerpo del POST, exacto 1`] = `
{
  "cuerpo": {
    "CfdiType": "I",
    "Currency": "MXN",
    "Date": "2026-09-21T20:15:30",
    "ExpeditionPlace": "06700",
    "Exportation": "01",
    "Folio": "1025",
    "Issuer": {
      "FiscalRegime": "601",
      "Name": "ESCUELA KEMPER URGATE",
      "Rfc": "EKU9003173C9",
    },
    "Items": [
      {
        "Description": "Consumo de alimentos y bebidas",
        "IdentificationNumber": "T-4410",
        "ProductCode": "90101500",
        "Quantity": 1,
        "Subtotal": 271.98,
        "TaxObject": "02",
        "Taxes": [
          {
            "Base": 271.98,
            "IsRetention": false,
            "Name": "IVA",
            "Rate": 0.16,
            "Total": 43.52,
          },
        ],
        "Total": 315.5,
        "Unit": "Servicio",
        "UnitCode": "E48",
        "UnitPrice": 271.98,
      },
    ],
    "PaymentForm": "01",
    "PaymentMethod": "PUE",
    "Receiver": {
      "CfdiUse": "G03",
      "FiscalRegime": "612",
      "Name": "CLIENTE SINTETICO",
      "Rfc": "XOJI740919U48",
      "TaxZipCode": "76028",
    },
    "Serie": "A",
  },
  "metodo": "POST",
  "url": "https://apisandbox.facturama.mx/api-lite/3/cfdis",
}
`;

exports[`Contrato Facturama: alta del CSD (F2-100) alta: POST /api-lite/csds con los archivos en base64 1`] = `
[
  {
    "cuerpo": {
      "Certificate": "Y2VyLWRlLXBydWViYQ==",
      "PrivateKey": "a2V5LWRlLXBydWViYQ==",
      "PrivateKeyPassword": "contrasena-dummy",
      "Rfc": "EKU9003173C9",
    },
    "metodo": "POST",
    "url": "https://apisandbox.facturama.mx/api-lite/csds",
  },
]
`;

exports[`Contrato Facturama: alta del CSD (F2-100) reemplazo: PUT /api-lite/csds/{rfc} 1`] = `
[
  {
    "cuerpo": {
      "Certificate": "Y2VyLWRlLXBydWViYQ==",
      "PrivateKey": "a2V5LWRlLXBydWViYQ==",
      "PrivateKeyPassword": "contrasena-dummy",
      "Rfc": "EKU9003173C9",
    },
    "metodo": "PUT",
    "url": "https://apisandbox.facturama.mx/api-lite/csds/EKU9003173C9",
  },
]
`;

exports[`Contrato Facturama: factura global (F2-108) el cuerpo del POST, exacto 1`] = `
{
  "cuerpo": {
    "CfdiType": "I",
    "Currency": "MXN",
    "Date": "2026-09-01T02:00:00",
    "ExpeditionPlace": "06700",
    "Exportation": "01",
    "Folio": "2040",
    "GlobalInformation": {
      "Months": "08",
      "Periodicity": "04",
      "Year": "2026",
    },
    "Issuer": {
      "FiscalRegime": "601",
      "Name": "ESCUELA KEMPER URGATE",
      "Rfc": "EKU9003173C9",
    },
    "Items": [
      {
        "Description": "Venta",
        "IdentificationNumber": "T-0101",
        "ProductCode": "01010101",
        "Quantity": 1,
        "Subtotal": 100,
        "TaxObject": "02",
        "Taxes": [
          {
            "Base": 100,
            "IsRetention": false,
            "Name": "IVA",
            "Rate": 0.16,
            "Total": 16,
          },
        ],
        "Total": 116,
        "Unit": "Actividad",
        "UnitCode": "ACT",
        "UnitPrice": 100,
      },
      {
        "Description": "Venta",
        "IdentificationNumber": "T-0102",
        "ProductCode": "01010101",
        "Quantity": 1,
        "Subtotal": 50,
        "TaxObject": "02",
        "Taxes": [
          {
            "Base": 50,
            "IsRetention": false,
            "Name": "IVA",
            "Rate": 0.16,
            "Total": 8,
          },
        ],
        "Total": 58,
        "Unit": "Actividad",
        "UnitCode": "ACT",
        "UnitPrice": 50,
      },
      {
        "Description": "Venta",
        "IdentificationNumber": "T-0103",
        "ProductCode": "01010101",
        "Quantity": 1,
        "Subtotal": 86.22,
        "TaxObject": "02",
        "Taxes": [
          {
            "Base": 86.22,
            "IsRetention": false,
            "Name": "IVA",
            "Rate": 0.16,
            "Total": 13.79,
          },
        ],
        "Total": 100.01,
        "Unit": "Actividad",
        "UnitCode": "ACT",
        "UnitPrice": 86.22,
      },
    ],
    "PaymentForm": "01",
    "PaymentMethod": "PUE",
    "Receiver": {
      "CfdiUse": "S01",
      "FiscalRegime": "616",
      "Name": "PUBLICO EN GENERAL",
      "Rfc": "XAXX010101000",
      "TaxZipCode": "06700",
    },
    "Serie": "A",
  },
  "metodo": "POST",
  "url": "https://apisandbox.facturama.mx/api-lite/3/cfdis",
}
`;

exports[`Contrato Facturama: sustitución y factura sin ticket (F2-107) el sustituto lleva \`Relations\` 04 con el UUID anterior (snapshot revisado a mano) 1`] = `
{
  "cuerpo": {
    "CfdiType": "I",
    "Currency": "MXN",
    "Date": "2026-09-21T20:15:30",
    "ExpeditionPlace": "06700",
    "Exportation": "01",
    "Folio": "1024",
    "Issuer": {
      "FiscalRegime": "601",
      "Name": "ESCUELA KEMPER URGATE",
      "Rfc": "EKU9003173C9",
    },
    "Items": [
      {
        "Description": "Tacos al pastor (orden)",
        "IdentificationNumber": "P001",
        "ProductCode": "90101500",
        "Quantity": 2,
        "Subtotal": 172.42,
        "TaxObject": "02",
        "Taxes": [
          {
            "Base": 172.42,
            "IsRetention": false,
            "Name": "IVA",
            "Rate": 0.16,
            "Total": 27.59,
          },
        ],
        "Total": 200.01,
        "Unit": "Servicio",
        "UnitCode": "E48",
        "UnitPrice": 86.21,
      },
      {
        "Description": "Refresco",
        "IdentificationNumber": "P020",
        "ProductCode": "90101500",
        "Quantity": 1,
        "Subtotal": 30.17,
        "TaxObject": "02",
        "Taxes": [
          {
            "Base": 30.17,
            "IsRetention": false,
            "Name": "IVA",
            "Rate": 0.16,
            "Total": 4.83,
          },
        ],
        "Total": 35,
        "Unit": "Pieza",
        "UnitCode": "H87",
        "UnitPrice": 30.17,
      },
    ],
    "PaymentForm": "04",
    "PaymentMethod": "PUE",
    "Receiver": {
      "CfdiUse": "G03",
      "FiscalRegime": "612",
      "Name": "Cliente "de prueba" & <Hijos>",
      "Rfc": "XOJI740919U48",
      "TaxZipCode": "76028",
    },
    "Relations": {
      "Cfdis": [
        {
          "Uuid": "1B4E28BA-2FA1-41D2-883F-0016D3CCA427",
        },
      ],
      "Type": "04",
    },
    "Serie": "A",
  },
  "metodo": "POST",
  "url": "https://apisandbox.facturama.mx/api-lite/3/cfdis",
}
`;
